--- a/app/views/vines/show.html.erb
+++ b/app/views/vines/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Vines#show</h1>
-<p>Find me in app/views/vines/show.html.erb</p>
+<h1><%= @vine.name %></h1>
+<ul>
+  <li><%= @vine.picture %></li>
+  <li><%= @vine.location %></li>
+  <li><%= @vine.variety %></li>
+  <li><%= @vine.description %></li>
+  <li><%= @vine.price %></li>
+</ul>
