--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -5,7 +5,7 @@
 
 // General style
 $font-family-sans-serif:  $body-font;
-$headings-font-family:    $headers-font;
+$headings-font-family:    $main-title;
 $body-bg:                 $light-gray;
 $font-size-base: 18px;
 
