--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,12 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,500|Raleway:400,100,300,700,500|ABeeZee|Lato:400,700");
 
 // Define fonts for body and headers
 $body-font: "Open Sans", "Helvetica", "sans-serif";
 $headers-font: "Raleway", "Helvetica", "sans-serif";
+$main-title: "Abeezee", "sans-serif";
+$tagline: "Lato", "sans-serif";
+
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
