Added links between pages and signout button

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -12,6 +12,7 @@
         <input type="text" class="form-control" id="search-value" placeholder="Région">
       </div>
       <button type="submit" class="btn btn-primary">Recherchez des vignes</button>
+      <%= link_to "Voir toutes nos vignes", vines_path, class: "btn btn-primary" %>
     </form>
 
   </div>
