--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,9 +7,10 @@
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Proposer des Vignes</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Inscription</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Connexion</a>
+    <%= link_to "Proposer des Vignes", new_vine_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "Inscription", new_user_registration_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "Connexion", user_session_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "Déconnection", destroy_user_session_path, :method => :delete, :class =>"navbar-wagon-item navbar-wagon-link" %>
   </div>
 
 </div>
