--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,7 +1,73 @@
 .card {
-  width: 600px;
-  height:300px;
+  width: 400px;
+  height: 315px;
   margin: 0 auto;
   margin-top:100px;
   background-color: white;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  position: relative;
+}
+
+.card:hover {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.avatar {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: 340px;
+  top: 10px;
+  z-index: 1;
+  border: 2px solid white;
+}
+
+.card-banner {
+  width:400px;
+  height:220px;
+  border-radius: 3px;
+}
+
+ul.item-description {
+  margin-top: 12px;
+  margin-bottom: 12px;
+  list-style-type: none;
+  padding-left: 10px;
+}
+
+#wine-type {
+  font-family: $headers-font;
+  font-size: 13px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+#dot {
+  font-weight: 700;
+}
+
+#color {
+  background-color: #970747;
+  height: 10px;
+  width: 10px;
+  text-align: center;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+li#card-title {
+  font-weight: 700;
+  color: #393939;
+  font-size: 20px;
+  font-family: $body-font;
+}
+
+#price {
+  color: rgba(57,57,57,0.8);
+  font-weight: 400;
+  font-family: $body-font;
+  font-size: 15px;
 }
