--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -1,11 +1,14 @@
 <div class="card">
-  <div class="photo"></div>
-    <div class="card-banner" style="background-image: url('https://source.unsplash.com/QTgOjDCiJEo');"></div>
-      <ul>
-        <li>Type of wine<span id="dot"> · </span>Region</li>
-        <li>Card Title</li>
-        <li>Price</li>
-      </ul>
+  <div class="avatar" style="background-image: url('https://source.unsplash.com/5jDJ4LaXiWE/50x50');"></div>
+    <div></div>
+      <div class="card-banner" style="background-image: url('https://source.unsplash.com/QTgOjDCiJEo');"></div>
+        <ul class="item-description">
+          <div>
+            <li id="wine-type"><span id="color"></span>Merlot<span id="dot">  ·  </span>Languedoc-Roussillon</li>
+            <li id="card-title">Château Brethous un vin biologique</li>
+            <li id="price">$135</li>
+          </div>
+        </ul>
 </div>
 
 
