--- a/app/views/vines/new.html.erb
+++ b/app/views/vines/new.html.erb
@@ -4,6 +4,7 @@
 <%= f.input :description %>
 <%= f.input :price %>
 <%= f.input :picture %>
+<%= f.input :picture_cache, as: :hidden %>
 <%= f.input :location %>
 <%= f.input :variety %>
 <%= f.submit "Submit" %>
