--- a/app/views/vines/new.html.erb
+++ b/app/views/vines/new.html.erb
@@ -7,5 +7,5 @@
 <%= f.input :picture_cache, as: :hidden %>
 <%= f.input :location %>
 <%= f.input :variety %>
-<%= f.submit "Submit" %>
+<%= f.submit "Submit", class: "btn btn-primary" %>
 <% end %>
