--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,12 +1,31 @@
+.container {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.wrapper-cards {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.container h1 {
+  margin-left: 10px;
+}
+
 .card {
-  width: 400px;
-  height: 315px;
+  width: 370px;
   margin: 0 auto;
-  margin-top:100px;
+  margin-top: 0px;
   background-color: white;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   position: relative;
+  margin-right: 10px;
+  margin-left: 10px;
+  padding-bottom: 1px;
+  border-radius: 3px;
 }
 
 .card:hover {
@@ -18,14 +37,14 @@
   width: 50px;
   height: 50px;
   position: absolute;
-  left: 340px;
-  top: 10px;
+  left: 310px;
+  top: 8px;
   z-index: 1;
   border: 2px solid white;
 }
 
 .card-banner {
-  width:400px;
+  width:100%;
   height:220px;
   border-radius: 3px;
 }
@@ -63,6 +82,9 @@ li#card-title {
   color: #393939;
   font-size: 20px;
   font-family: $body-font;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 #price {
