--- a/app/views/vines/index.html.erb
+++ b/app/views/vines/index.html.erb
@@ -1,16 +1,20 @@
-<h1>Our vines</h1>
+
+
+<div class="container">
+  <h1>Our vines</h1>
+  <div class="wrapper-cards">
 
 <% @vines.each do |vine|%>
-  <%= link_to vine_path(vine) do %>
-  <div class="card">
-    <ul>
-      <li><%= vine.name %></li>
-      <li><%= vine.picture %></li>
-      <li><%= vine.location %></li>
-      <li><%= vine.variety %></li>
-      <li><%= vine.description %></li>
-      <li><%= vine.price %></li>
-    </ul>
-  </div>
-  <% end %>
+    <div class="card">
+      <div class="avatar" style="background-image: url('https://source.unsplash.com/5jDJ4LaXiWE/50x50');"></div>
+      <div class="card-banner" style="background-image: url('https://source.unsplash.com/QTgOjDCiJEo');"></div>
+      <ul class="item-description">
+        <li id="wine-type"><span id="color"></span> <%= vine.variety %><span id="dot">  ·  </span> <%= vine.location %></li>
+        <li id="card-title"> <%= vine.name %></li>
+        <li id="price"> <%= vine.price %></li>
+      </ul>
+    </div>
 <% end %>
+
+</div>
+</div>
