--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -8,22 +8,36 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  z-index: 0;
 }
 .banner h1 {
   font-size: 55px;
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  z-index: 2;
+  position: relative;
 }
 .banner p {
   font-size: 25px;
-  font-weight: 500;
+  font-weight: 600;
   color: rgba(255, 255, 255, 1);
   margin-bottom: 30px;
-  font-family: $headers-font;
+  font-family: $tagline;
 }
 
 .btn.btn-primary {
+  border-radius: 4px;
+}
 
+.underline-main-title {
+  background-color: #E32D6F;
+  height: 25px;
+  width: 700px;
+  position: absolute;
+  z-index: -1;
+  top: 33px;
+  right: 60px;
+  opacity: 0.90;
 }
 
 
