--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,17 +1,18 @@
 
-<div class="banner text-center" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.2) 0%, rgba(0,36,61,0.2) 50%), url('https://source.unsplash.com/QTgOjDCiJEo');">
+<div class="banner text-center" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.2) 0%, rgba(0,36,61,0.2) 50%), url('https://source.unsplash.com/piR6qwg11Fo');">
   <div class="banner-content">
-    <h1 id="main-title">Votre cuvée, personalisée.</h1>
+    <h1 id="main-title">Votre cuvée, personalisée.<div class="underline-main-title"></div></h1>
     <p id="tagline">Adoptez des pieds de vignes de vignerons engagés</p>
+
 
     <form class="form-inline">
       <div class="form-group">
-        <input type="text" class="form-control" id="search-value" placeholder="Vine Type">
+        <input type="text" class="form-control" id="search-value" placeholder="&#xf111;  Type de vin" style="font-family: FontAwesome, Raleway; font-style: normal; font-size: 14px; font-weight: 500">
       </div>
       <div class="form-group">
-        <input type="text" class="form-control" id="search-value" placeholder="Région">
+        <input type="text" class="form-control" id="search-value" placeholder="&#xf279;  Région" style="font-family: FontAwesome, Raleway; font-style: normal; font-size: 14px; font-weight: 500">
       </div>
-      <button type="submit" class="btn btn-primary">Recherchez des vignes</button>
+      <!-- <button type="submit" class="btn btn-primary">Recherchez des vignes</button> -->
       <%= link_to "Voir toutes nos vignes", vines_path, class: "btn btn-primary" %>
     </form>
 
