--- a/app/views/vines/index.html.erb
+++ b/app/views/vines/index.html.erb
@@ -5,10 +5,11 @@
   <div class="wrapper-cards">
 
 <% @vines.each do |vine|%>
-  
+
     <div class="card">
       <div class="avatar" style="background-image: url('https://source.unsplash.com/5jDJ4LaXiWE/50x50');"></div>
-      <div class="card-banner" style="background-image: url('https://source.unsplash.com/QTgOjDCiJEo');"></div>
+      <div class="card-banner" style="background-image: cl_image_tag(vine.picture,
+      width: 400, height: 300, crop: :fill)"></div>
       <ul class="item-description">
         <li id="wine-type"><span id="color"></span> <%= vine.variety %><span id="dot">  ·  </span> <%= vine.location %></li>
         <li id="card-title"> <%= vine.name %></li>
