finished footer and created value proposition cards

--- a/app/views/shared/_value_proposition_card.html.erb
+++ b/app/views/shared/_value_proposition_card.html.erb
@@ -1,15 +1,17 @@
 <div class="vp-container">
   <p class="vp-main-title">J’adopte des pieds de vignes… et je reçois un vin délicieux.</p>
+  <div class="vp-wrapper">
   <div class="vp-card">
-    <p class="vp-card-title">Title</p>
-    <p class="vp-card-description">Our product is the most amazing you will ever taste in your whole life. Don't you ever doubt that ok.</p>
+    <p class="vp-card-title">Je choisis mon vin</p>
+    <p class="vp-card-description">Vous choisissez sur notre plateforme le vignoble que vous souhaitez parrainer, grace à notre algorithme.</p>
   </div>
     <div class="vp-card">
-    <p class="vp-card-title">Title</p>
-    <p class="vp-card-description">Our product is the most amazing you will ever taste in your whole life. Don't you ever doubt that ok.</p>
+    <p class="vp-card-title">Je suis mes vignes</p>
+    <p class="vp-card-description">Suivez l’évolution de vos vignes pendant 1 an, via des newsletters envoyées par Cuvée Privée.</p>
   </div>
   <div class="vp-card">
-    <p class="vp-card-title">Title</p>
-    <p class="vp-card-description">Our product is the most amazing you will ever taste in your whole life. Don't you ever doubt that ok.</p>
+    <p class="vp-card-title">Je reçois mes bouteilles</p>
+    <p class="vp-card-description">Reçevez les bouteilles du vignoble que vous avez parrainé à la fin de l’année! Six pieds de vignes pour six bouteilles.</p>
+  </div>
   </div>
 </div>
