--- a/app/assets/stylesheets/components/_value_proposition_card.scss
+++ b/app/assets/stylesheets/components/_value_proposition_card.scss
@@ -5,6 +5,8 @@
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 4px;
+  margin-right: 50px;
+  margin-left: 50px;
 }
 
 .vp-card:hover {
@@ -20,22 +22,33 @@
   font-size: 28px;
   padding-left: 15px;
   font-weight: bold;
+  margin-left: 65px;
+  font-family: $main-title;
 }
 
 p.vp-card-title {
   padding-top: 22px;
   margin-bottom: 15px;
   font-weight: bold;
+  font-family: $headers-font;
 }
 
 p.vp-card-description {
   padding-right: 15px;
-  line-height: 1.5;
-  font-size: 16px;
+  line-height: 1.6;
+  font-size: 17px;
+  font-family: $tagline;
 }
 
 .vp-container {
-  margin: 30px 30px;
+  margin: 30px 0px;
+
+}
+
+.vp-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 
