--- a/app/views/shared/_navbar_signed_in.html.erb
+++ b/app/views/shared/_navbar_signed_in.html.erb
@@ -7,7 +7,12 @@
     <div class="navbar-wagon-right-signed-in hidden-xs hidden-sm">
       <%= link_to "Proposer des Vignes", new_vine_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Déconnexion", destroy_user_session_path, :method => :delete, :class =>"navbar-wagon-item navbar-wagon-link" %>
-      <img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="navbar-wagon-item avatar-navbar">
+      <% profile_pic_path = cl_image_path current_user.picture, height: 35, width: 35, crop: :fill%>
+      <img class="avatar-navbar" style="background-image: url('<%= profile_pic_path %>');"></img>
     </div>
 </div>
+
+<!-- <img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="navbar-wagon-item avatar-navbar">
+ -->
+
 
