iprove the show design

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -3,3 +3,9 @@
   border: 2px solid #76B39D;
   margin: 1px;
 }
+
+.btn-primary:hover {
+  background-color: #76B39D;
+  border: 2px solid #76B39D;
+  opacity: 0.8;
+}
