made some front edits

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -15,6 +15,7 @@
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
   z-index: 2;
+  display: inline-block;
   position: relative;
 }
 .banner p {
@@ -25,19 +26,19 @@
   font-family: $tagline;
 }
 
-.btn.btn-primary {
-  border-radius: 4px;
-}
-
 .underline-main-title {
-  background-color: #E32D6F;
+  background-color: #5C23FF;
   height: 25px;
-  width: 700px;
+  width: 100%;
   position: absolute;
   z-index: -1;
-  top: 33px;
-  right: 60px;
+  top: 0.65em;
   opacity: 0.90;
 }
+
+.form-inline .form-group {
+  margin: 0px 2px;
+}
+
 
 
