--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -14,7 +14,7 @@
   padding-bottom: 25px;
 }
 .footer-links a {
-  color: #3772FF;
+  color: rgb(151,7,71);
   opacity: 0.8;
   text-decoration: none;
   font-size: 24px;
@@ -40,17 +40,17 @@
   text-transform: uppercase;
   font-size: 14px;
   font-weight: bold;
-  color: #3772FF;
+  color: rgb(151,7,71);
 }
 
 .description a {
-  color: #3772FF;
+  color: rgb(151,7,71);
   opacity: 0.8;
   text-decoration: none;
 }
 
 .description a:hover {
-  color: #3772FF;
+  color: rgb(151,7,71);
   opacity: 1;
   text-decoration: none;
 }
@@ -58,7 +58,7 @@
 .adresse-footer {
   padding-bottom: 6px;
   font-size: 13px;
-  color: #3772FF;
+  color: rgb(151,7,71);
   opacity: 0.8;
 }
 
@@ -67,6 +67,10 @@
   margin-bottom: 9px;
   font-size: 13px;
   font-weight: bold;
-  color: #3772FF;
+  color: rgb(151,7,71);
   opacity: 0.8;
+}
+
+.sticky-footer {
+  min-height: calc(100vh - 260px);
 }
