--- a/app/assets/stylesheets/components/_value_proposition_card.scss
+++ b/app/assets/stylesheets/components/_value_proposition_card.scss
@@ -1,12 +1,10 @@
 .vp-card {
-  width: 320px;
   height: 190px;
   background-color: white;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 4px;
-  margin-right: 50px;
-  margin-left: 50px;
+  flex: 0 0 320px;
 }
 
 .vp-card:hover {
@@ -20,9 +18,7 @@
 .vp-main-title {
   margin-bottom: 30px;
   font-size: 28px;
-  padding-left: 15px;
   font-weight: bold;
-  margin-left: 65px;
   font-family: $main-title;
 }
 
@@ -41,14 +37,13 @@ p.vp-card-description {
 }
 
 .vp-container {
-  margin: 30px 0px;
+  padding: 20px 40px;
 
 }
 
 .vp-wrapper {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 
