--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,16 @@
   <body>
 
     <%= render 'shared/flashes' %>
-  
+
     <% if user_signed_in? %>
     <%= render 'shared/navbar_signed_in' %>
     <% else %>
     <%= render 'shared/navbar' %>
     <% end %>
+    <div class="sticky-footer">
+
     <%= yield %>
+    </div>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
     <%= render 'shared/footer' %>
