--- a/app/views/vines/index.html.erb
+++ b/app/views/vines/index.html.erb
@@ -6,7 +6,6 @@
 
 <% @vines.each do |vine|%>
   <% photo_path = cl_image_path vine.picture, height: 300, width: 400, crop: :fill%>
-  <%= link_to vine_path(vine) do %>
 
     <div class="card">
       <div class="avatar" style="background-image: url('https://source.unsplash.com/5jDJ4LaXiWE/50x50');"></div>
@@ -16,9 +15,9 @@
         <li id="card-title"> <%= vine.name %></li>
         <li id="price"> <%= vine.price %></li>
       </ul>
+      <%= link_to "", vine_path(vine), class: "card-link" %>
     </div>
   <% end %>
-<% end %>
 
 </div>
 </div>
