--- a/app/views/vines/new.html.erb
+++ b/app/views/vines/new.html.erb
@@ -1,8 +1,10 @@
 <% if policy(Vine).create? %>
-
 <% end %>
-<div>
-  <div class = "formulaire">
+
+
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.2) 0%, rgba(0,36,61,0.2) 50%), url(<%= image_path 'background3.jpg' %>);">
+  <div class="container">
+    <div class = "formulaire">
       <div class="container">
         <div class="row">
           <div class="col-sm-6 col-sm-offset-4">
@@ -19,8 +21,16 @@
             <% end %>
           </div>
         </div>
+      </div>
     </div>
   </div>
+</div>
+
+
+
+
+
+
 
 
 
