Changed color of sign-in background image

--- a/app/assets/stylesheets/pages/_sign-up.scss
+++ b/app/assets/stylesheets/pages/_sign-up.scss
@@ -1,5 +1,5 @@
-.container-connexion {
+.container-inscription {
   background-image: linear-gradient(-225deg, rgba(200,200,200,0.4) 0%, rgba(200,200,200,0.4) 50%), url("vignes.jpg");
   background-size: cover;
-  height: 500px;
+  height: 700px;
 }
