--- a/app/views/vines/index.html.erb
+++ b/app/views/vines/index.html.erb
@@ -1,11 +1,9 @@
+<h1>Nos vignes</h1>
+<div class="product-list">
 
 
-<div class="container">
-  <h1>Nos vignes</h1>
   <div class="wrapper-cards">
-
-<% @vines.each do |vine|%>
-
+  <% @vines.each do |vine|%>
   <%= link_to vine_path(vine) do %>
     <div class="card">
       <% if vine.user.picture.present? %>
@@ -23,16 +21,12 @@
     </div>
   <% end %>
 <% end %>
-
 </div>
-
-<div
-  id="map"
-  style="width: 100%;
-  height: 600px;"
+<div class= "map-container">
+<div id="map"
   data-markers="<%= @markers.to_json %>"
 ></div>
-
+</div>
 
 </div>
 
