--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -47,3 +47,23 @@
   padding-right: 15px;
 }
 
+.form_box {
+  background-color: rgba(255, 255, 255, 1);
+  width : 450px;
+  border-radius: 5px;
+}
+
+.form {
+  color: black;
+  margin-left : 25px;
+  margin-right : 25px;
+}
+
+.form h1 {
+  font-size: 50px;
+}
+
+#new_vine {
+  border-radius: 5px;
+  border-color: #76B39D;
+}
