--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -3,3 +3,12 @@
   border: 2px solid #76B39D;
   margin: 1px;
 }
+
+.boutton_de_l_espace {
+  color: white;
+  background-color : #76B39D;
+  width: 100%;
+  margin-bottom: 25px;
+  height: 50px;
+  border-radius: 5px;
+}
