--- a/app/views/vines/new.html.erb
+++ b/app/views/vines/new.html.erb
@@ -6,8 +6,8 @@
   <div class="container">
     <div class = "formulaire">
       <div class="container">
-        <div class="row">
-          <div class="col-sm-6 col-sm-offset-4">
+        <div class="row form_box">
+          <div class="form">
             <h1>Create a new vine</h1>
             <%= simple_form_for @vine do |f|%>
               <%= f.input :name %>
@@ -16,8 +16,8 @@
               <%= f.input :picture %>
               <%= f.input :picture_cache, as: :hidden %>
               <%= f.input :location %>
-              <%= f.input :variety %>
-              <%= f.submit "Submit", class: "btn btn-primary" %>
+              <%= f.input :variety, class: "test" %>
+              <%= f.submit "Submit", class: "boutton_de_l_espace" %>
             <% end %>
           </div>
         </div>
