--- a/app/views/vines/new.html.erb
+++ b/app/views/vines/new.html.erb
@@ -9,12 +9,13 @@
             <h1>Create a new vine</h1>
             <%= simple_form_for @vine do |f|%>
               <%= f.input :name %>
+              <%= f.input :color, :collection => %w[Rouge Blanc Rosé] %>
+              <%= f.input :variety %>
+              <%= f.input :location %>
               <%= f.input :description %>
               <%= f.input :price %>
               <%= f.input :picture %>
               <%= f.input :picture_cache, as: :hidden %>
-              <%= f.input :location %>
-              <%= f.input :variety %>
               <%= f.submit "Submit", class: "btn btn-primary" %>
             <% end %>
           </div>
