--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 
-<% if !current_user %>
+<% if user_signed_in? %>
   <div class="navbar-wagon">
     <!-- Logo -->
     <a href="/" class="navbar-wagon-brand">
@@ -10,8 +10,8 @@
     <div class="navbar-wagon-right hidden-xs hidden-sm">
 
       <%= link_to "Proposer des Vignes", new_vine_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Inscription", new_user_registration_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Connexion", user_session_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Tableau de bord", dashboard_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Déconnexion", destroy_user_session_path, :method => :delete, :class =>"navbar-wagon-item navbar-wagon-link" %>
     </div>
   </div>
 
@@ -23,9 +23,8 @@
     </a>
 
     <div class="navbar-wagon-right hidden-xs hidden-sm">
-      <%= link_to "Proposer des Vignes", new_vine_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Tableau de bord", dashboard_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Déconnection", destroy_user_session_path, :method => :delete, :class =>"navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Inscription", new_user_registration_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Connexion", user_session_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
     </div>
   </div>
 <% end %>
