--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,4 +1,4 @@
-.btn-primary {
+.btn-primary, .btn-primary:focus {
   background-color: rgb(154,6,72);
   border: 2px solid rgb(154,6,72);
   margin: 1px;
@@ -36,3 +36,5 @@
   height: 50px;
   border-radius: 5px;
 }
+
+
