--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,6 +25,7 @@
     </a>
 
     <div class="navbar-wagon-right hidden-xs hidden-sm">
+      <%= link_to "Proposer des Vignes", new_vine_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Inscription", new_user_registration_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Connexion", user_session_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
     </div>
