correct the sticky map missing in previous git push

--- a/app/assets/stylesheets/pages/_product.scss
+++ b/app/assets/stylesheets/pages/_product.scss
@@ -1,6 +1,7 @@
 .product-list{
   display: flex;
-  align-items: stretch;
+  justify-content: space-between;
+
 }
 .wrapper-cards{
   flex : 0 0 66%;
