show style corrections

--- a/app/views/vines/show.html.erb
+++ b/app/views/vines/show.html.erb
@@ -22,7 +22,7 @@
           </div>
           <%= simple_form_for([@vine, @booking], method: "post") do |f|%>
           <%= f.input :start_at, label: "Date de début"%>
-          <%= f.submit "Adopter cette vigne et payer", class: "btn btn-primary" %>
+          <%= f.submit "Adopter cette vigne", class: "btn btn-primary" %>
           <% end %>
         </div>
       </div>
