--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,13 +7,19 @@
     </a>
 
     <!-- Right Navigation -->
-    <div class="navbar-wagon-right-signed-in hidden-xs hidden-sm">
-
+    <div class="navbar-wagon-right-signed-in hidden-xs hidden-sm position">
       <%= link_to "Proposer des Vignes", new_vine_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Tableau de bord", dashboard_path, :class =>"navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Déconnexion", destroy_user_session_path, :method => :delete, :class =>"navbar-wagon-item navbar-wagon-link" %>
       <% profile_pic_path = current_user.picture.url.nil? ? "http://kitt.lewagon.com/placeholder/users/Gumbet" : cl_image_path(current_user.picture, height: 35, width: 35, crop: :fill) %>
-        <%= image_tag profile_pic_path, class: "avatar-navbar" %>
+            <div class="navbar-wagon-item">
+                <div class="dropdown">
+                  <%= image_tag profile_pic_path, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+                  <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+                    <li><%= link_to "Tableau de bord", dashboard_path %></li>
+                    <li><%= link_to "Déconnexion", destroy_user_session_path, :method => :delete %></li>
+                  </ul>
+              </div>
+            </div>
+          </div>
     </div>
   </div>
 
