--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="avatar" style="background-image: url('https://source.unsplash.com/5jDJ4LaXiWE/50x50');"></div>
+  <div class="avatar-card" style="background-image: url('https://source.unsplash.com/5jDJ4LaXiWE/50x50');"></div>
       <div class="card-banner" style="background-image: url('https://source.unsplash.com/QTgOjDCiJEo');"></div>
         <ul class="item-description">
           <div>
