--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,8 +6,9 @@
 .wrapper-cards {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+  align-items: flex-start;
+  justify-content: space-around;
+  flex : 0 0 66%;
 }
 
 .main-container {
@@ -37,7 +38,7 @@
   text-decoration: none;
 }
 
-.avatar {
+.avatar-card {
   border-radius: 50%;
   width: 50px;
   height: 50px;
