--- a/app/views/vines/index.html.erb
+++ b/app/views/vines/index.html.erb
@@ -12,7 +12,7 @@
     <div class="card">
       <% if vine.user.picture.present? %>
         <% profile_pic_path = cl_image_path vine.user.picture, height: 45, width: 45, crop: :fill%>
-        <div class="avatar" style="background-image: url('<%= profile_pic_path %>');"></div>
+        <div class="avatar-card" style="background-image: url('<%= profile_pic_path %>');"></div>
       <% end %>
       <% photo_path = cl_image_path vine.picture, height: 300, width: 400, crop: :fill%>
       <div class="card-banner" style="background-image: url('<%= photo_path %>');"></div>
