--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,7 +1,7 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "show";
-
+@import "dashboard";
 @import "sign-in";
 @import "sign-up";
 @import "product";
