--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -13,7 +13,7 @@
       <li class="message">
         <img class="profile-pic" src="images/gab.png" alt="">
         <p class="user_name"> <strong><%=booking.user.first_name %> <%=booking.user.last_name %></strong> <br> <%=booking.start_at %></p></strong></p>
-        <p class="vine_name"><strong><%= vine.name %></strong> : <%= booking.status %> <br> <%= vine.description %> </p>
+        <p class="vine-name"><strong><%= vine.name %></strong> : <%= booking.status %> <br> <%= vine.description %> </p>
         <div class="prix">
           <%= simple_form_for(booking) do |f| %>
             <%= f.input :status, as: :hidden, input_html: { value: "Accepté" } %>
