--- a/app/views/vines/index.html.erb
+++ b/app/views/vines/index.html.erb
@@ -1,37 +1,40 @@
 
-
 <h1>Nos vignes</h1>
- <%= form_tag(vines_path, :id => "index-search", :method => :get) do %>
-    <%= select_tag( :price, options_for_select(Vine.prices, selected: params[:price]))%>
-    <%= select_tag( :variety, options_for_select(Vine.varieties, selected: params[:variety]), id: "variety-tag" )%>
-  <% end %>
+<%= form_tag(vines_path, :id => "index-search", :method => :get) do %>
+<%= select_tag( :price, options_for_select(Vine.prices, selected: params[:price]))%>
+<%= select_tag( :variety, options_for_select(Vine.varieties, selected: params[:variety]), id: "variety-tag" )%>
+<% end %>
 <div class="product-list">
   <div class="wrapper-cards">
-  <% @vines.each do |vine|%>
-    <% photo_path = cl_image_path vine.picture, height: 300, width: 400, crop: :fill%>
-    <div class="card">
-      <% if vine.user.picture.present? %>
-        <% profile_pic_path = cl_image_path vine.user.picture, height: 45, width: 45, crop: :fill%>
-        <div class="avatar-card" style="background-image: url('<%= profile_pic_path %>');"></div>
+    <div class="row">
+      <% @vines.each do |vine|%>
+        <div class="col-xs-12 col-md-6">
+          <% photo_path = cl_image_path vine.picture, height: 300, width: 400, crop: :fill%>
+          <div class="card">
+            <% if vine.user.picture.present? %>
+              <% profile_pic_path = cl_image_path vine.user.picture, height: 45, width: 45, crop: :fill%>
+              <div class="avatar-card" style="background-image: url('<%= profile_pic_path %>');"></div>
+            <% end %>
+            <% photo_path = cl_image_path vine.picture, height: 300, width: 400, crop: :fill%>
+            <div class="card-banner" style="background-image: url('<%= photo_path %>');"></div>
+            <ul class="item-description">
+              <% if vine.color == "Rouge" %>
+              <li id="wine-type"><span id="color-red"></span> <%= vine.variety %><span id="dot">  ·  </span> <%= vine.location %></li>
+              <% elsif vine.color == "Blanc" %>
+              <li id="wine-type"><span id="color-white"></span> <%= vine.variety %><span id="dot">  ·  </span> <%= vine.location %></li>
+              <% else %>
+              <li id="wine-type"><span id="color-rose"></span> <%= vine.variety %><span id="dot">  ·  </span> <%= vine.location %></li>
+              <% end %>
+
+              <li id="card-title"> <%= vine.name %></li>
+              <li id="price"> <%= vine.price %></li>
+            </ul>
+            <%= link_to "", vine_path(vine), class: "card-link" %>
+          </div>
+
+        </div>
       <% end %>
-      <% photo_path = cl_image_path vine.picture, height: 300, width: 400, crop: :fill%>
-      <div class="card-banner" style="background-image: url('<%= photo_path %>');"></div>
-      <ul class="item-description">
-
-        <% if vine.color == "Rouge" %>
-        <li id="wine-type"><span id="color-red"></span> <%= vine.variety %><span id="dot">  ·  </span> <%= vine.location %></li>
-        <% elsif vine.color == "Blanc" %>
-        <li id="wine-type"><span id="color-white"></span> <%= vine.variety %><span id="dot">  ·  </span> <%= vine.location %></li>
-        <% else %>
-        <li id="wine-type"><span id="color-rose"></span> <%= vine.variety %><span id="dot">  ·  </span> <%= vine.location %></li>
-        <% end %>
-
-        <li id="card-title"> <%= vine.name %></li>
-        <li id="price"> <%= vine.price %></li>
-      </ul>
-      <%= link_to "", vine_path(vine), class: "card-link" %>
     </div>
-  <% end %>
 </div>
 <div class= "map-container">
 <div id="map"
