--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -95,12 +95,12 @@ p.user_name {
 
 .vine_name_accepted {
  width: 45%;
- color: green;
+ color: #5AB498;
 }
 
 .vine_name_declined {
  width: 45%;
- color: red;
+ color: #DF6860;
 }
 
 
