résolu le pb de nom de classes css

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -15,13 +15,13 @@
         <%= image_tag profile_pic_path, class: "avatar-navbar" %>
         <img class="profile-pic" src="images/gab.png" alt="">
 
-        <p class="user_name"> <strong><%=booking.user.first_name.capitalize %> <%=booking.user.last_name.capitalize %></strong> <br> <%=booking.start_at %></p></strong></p>
+        <p class="user-name"> <strong><%=booking.user.first_name.capitalize %> <%=booking.user.last_name.capitalize %></strong> <br> <%=booking.start_at %></p></strong></p>
         <% if booking.status == "En attente" %>
-          <p class="vine_name"><strong><%= vine.name %></strong> : <%= booking.status %> <br> <%= vine.description %> </p>
+          <p class="vine-name"><strong><%= vine.name %></strong> : <%= booking.status %> <br> <%= vine.description %> </p>
         <% elsif booking.status == "Accepté" %>
-          <p class="vine_name_accepted"><strong><%= vine.name %></strong> : <%= booking.status %> <br> <%= vine.description %> </p>
+          <p class="vine-name-accepted"><strong><%= vine.name %></strong> : <%= booking.status %> <br> <%= vine.description %> </p>
         <% else %>
-          <p class="vine_name_declined"><strong><%= vine.name %></strong> : <%= booking.status %> <br> <%= vine.description %> </p>
+          <p class="vine-name-declined"><strong><%= vine.name %></strong> : <%= booking.status %> <br> <%= vine.description %> </p>
 
           <% end %>
         <div class="prix">
