--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -72,23 +72,23 @@ a.tabs {
   width: 15%;
 }
 
-p.user_name {
+p.user-name {
   width: 25%;
 }
 
 
-.vine_name {
+.vine-name {
  width: 45%
 
 
 }
 
-.vine_name_accepted {
+.vine-name-accepted {
  width: 45%;
  color: #5AB498;
 }
 
-.vine_name_declined {
+.vine-name-declined {
  width: 45%;
  color: #DF6860;
 }
