--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,8 +7,15 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  justify-content: space-around;
+  justify-content: space-between;
   flex : 0 0 66%;
+  padding: 0px 30px;
+  margin-bottom: 30px;
+}
+
+.wrapper-cards:after {
+  content: "";
+  flex: auto;
 }
 
 .main-container {
@@ -22,7 +29,7 @@
 .card {
   width: 370px;
   margin: 0 auto;
-  margin-top: 10px;
+  margin-top: 30px;
   background-color: white;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -132,3 +139,6 @@ li#card-title {
   opacity: 0;
 }
 
+#index-title {
+  padding-left: 40px;
+}
