--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,7 @@
 
 <div class="banner text-center" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.2) 0%, rgba(0,36,61,0.2) 50%), url('<%= image_path "home_banner.jpg" %>');">
   <div class="banner-content">
-    <h1 id="main-title">Votre cuvée, personalisée.<div class="underline-main-title"></div></h1>
+    <h1 id="main-title">Votre cuvée, personnalisée.<div class="underline-main-title"></div></h1>
     <p id="tagline">Adoptez des pieds de vignes de vignerons engagés</p>
 
 
