--- a/app/views/vines/index.html.erb
+++ b/app/views/vines/index.html.erb
@@ -22,26 +22,31 @@
             <% end %>
             <% photo_path = cl_image_path vine.picture, height: 300, width: 400, crop: :fill%>
             <div class="card-banner" style="background-image: url('<%= photo_path %>');"></div>
-            <ul class="item-description">
-              <% if vine.color == "Rouge" %>
-              <li id="wine-type"><span id="color-red"></span> <%= vine.variety %><span id="dot">  ·  </span> <%= vine.location %></li>
-              <% elsif vine.color == "Blanc" %>
-              <li id="wine-type"><span id="color-white"></span> <%= vine.variety %><span id="dot">  ·  </span> <%= vine.location %></li>
-              <% else %>
-              <li id="wine-type"><span id="color-rose"></span> <%= vine.variety %><span id="dot">  ·  </span> <%= vine.location %></li>
-              <% end %>
-
-        <li id="card-title"> <%= vine.name %></li>
-        <li id="price">€<%= vine.price %></li>
-      </ul>
-      <%= link_to "", vine_path(vine), class: "card-link" %>
+                <ul class="item-description">
+                  <% if vine.color == "Rouge" %>
+                    <li id="wine-type">
+                      <span id="color-red"></span><%= vine.variety %><span id="dot">  ·  </span> <%= vine.location %>
+                    </li>
+                  <% elsif vine.color == "Blanc" %>
+                    <li id="wine-type">
+                      <span id="color-white"></span> <%= vine.variety %><span id="dot">  ·  </span> <%= vine.location %>
+                    </li>
+                  <% else %>
+                    <li id="wine-type">
+                      <span id="color-rose"></span> <%= vine.variety %><span id="dot">  ·  </span> <%= vine.location %>
+                    </li>
+                  <% end %>
+                  <li id="card-title"> <%= vine.name %></li>
+                  <li id="price">€<%= vine.price %></li>
+                </ul>
+                <%= link_to "", vine_path(vine), class: "card-link" %>
+            </div>
+          </div>
+      <% end %>
     </div>
-</div>
-<div class= "map-container">
-<div id="map"
-  data-markers="<%= @markers.to_json %>"
-></div>
-</div>
-
+  </div>
+  <div class= "map-container">
+    <div id="map" data-markers="<%= @markers.to_json %>"></div>
+  </div>
 </div>
 
