--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -29,7 +29,7 @@
 .card {
   width: 370px;
   margin: 0 auto;
-  margin-top: 30px;
+  margin-bottom: 30px;
   background-color: white;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -140,5 +140,5 @@ li#card-title {
 }
 
 #index-title {
-  padding-left: 40px;
+  padding-left: 70px;
 }
